@@ -714,7 +714,7 @@ class Subnets extends Common_functions {
 	 * @return array|false
 	 */
 	public function fetch_overlapping_subnets ($cidr, $method=null, $value=null, $result_fields = "*") {
-		if ($this->verify_cidr_address($cidr)!==true) return false;
+		if ($this->verify_cidr_address($cidr) !== true) return false;
 
 		$result_fields = $this->Database->escape_result_fields($result_fields);
 
@@ -724,22 +724,27 @@ class Subnets extends Common_functions {
 		$cidr_broadcast = $this->decimal_broadcast_address($cidr_decimal, $cidr_mask);
 
 		$possible_parents = array();
-		for ($mask=0; $mask<=$cidr_mask; $mask++) {
+		for ($mask = 0; $mask <= $cidr_mask; $mask++) {
 			$parent = $this->decimal_network_address($cidr_decimal, $mask);
 			$possible_parents[] = "('$parent','$mask')";
 		}
 		$possible_parents = implode(',', $possible_parents);
 
-		$query = "SELECT $result_fields FROM `subnets` WHERE `isFolder` = 0 AND ";
-		if (!is_null($method)) $query .= " `$method` = '".$this->Database->escape($value)."' AND ";
-		$query .= " (   ( LPAD(`subnet`,39,0) >= LPAD('$cidr_network',39,0) AND LPAD(`subnet`,39,0) <= LPAD('$cidr_broadcast',39,0) )";
-		$query .= "  OR (`subnet`,`mask`) IN ($possible_parents)  ) ";
-		$query .= "ORDER BY CAST(`mask` AS UNSIGNED) DESC, LPAD(`subnet`,39,0);";
+		$query = [];
+		$query[] = "SELECT $result_fields FROM `subnets` WHERE COALESCE(`isFolder`,0) = 0 AND ";
+		if (!is_null($method)) {
+			$query[] = " COALESCE(`$method`,0) = '" . $this->Database->escape($value) . "' AND ";
+		}
+		$query[] = " ( ";
+		$query[] = "   ( LPAD(`subnet`,39,0) >= LPAD('$cidr_network',39,0) AND LPAD(`subnet`,39,0) <= LPAD('$cidr_broadcast',39,0) )";
+		$query[] = "   OR (`subnet`,`mask`) IN ($possible_parents)";
+		$query[] = " ) ";
+		$query[] = "ORDER BY CAST(`mask` AS UNSIGNED) DESC, LPAD(`subnet`,39,0);";
 
 		try {
-			$overlaping_subnets = $this->Database->getObjectsQuery($query);
+			$overlaping_subnets = $this->Database->getObjectsQuery(implode("\n", $query));
 		} catch (Exception $e) {
-			$this->Result->show("danger", _("Error: ").$e->getMessage());
+			$this->Result->show("danger", _("Error: ") . $e->getMessage());
 			return false;
 		}
 
